AX-4615 AX-4991 fix report pdf chart layout and legend values that are too long (#3792)
* fix report pdf chart layout and legend values that are too long

* cr changes

* cr changes

* fix long histogram values + wrong card height not in the first page if charts

* remove unnecessary lines

--- a/plugins/gui/templates/report/styles/styles.css
+++ b/plugins/gui/templates/report/styles/styles.css
@@ -290,6 +290,10 @@ a {
     margin-bottom: 12px;
     margin-right: 40px;
     float: left;
+    position: relative;
+}
+.discovery-charts .card {
+    height: 360px;
 }
 .discovery-charts .card h3 {
     height: 20px;
@@ -311,8 +315,13 @@ a {
     list-style-type: square;
     text-align: left;
 }
-.card .legend span {
+.card .legend .legend-value {
     color: #1D222C;
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 260px;
 }
 .card .legend .no-list-type {
     list-style-type: none;
@@ -326,6 +335,9 @@ a {
 .card .legend .multi-colored{
     list-style-type: none;
 }
+.card .legend .multi-colored .legend-value{
+    display: inline-block;
+}
 .card .legend .no-list-type::before{
     margin-left: -17px;
     list-style-type: none;
@@ -334,12 +346,13 @@ a {
     background: repeating-linear-gradient(45deg,#15C59E, #1593C5 4px, #15C59E 4px, #1593C5 8px);
     content: "\2022";
     color: transparent;
-    display: inline-block;
-    width: 13px;
+    display: inline;
+    width: 16px;
     height: 13px;
-    margin-left: -17px;
+    margin-left: -16px;
     list-style-type: none;
     border-radius: 5px;
+    margin-right: 3px;
 }
 .histogram {
     text-align: left;
@@ -380,12 +393,18 @@ a {
 }
 .histogram .title {
     margin-top: 1px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .histogram .remainder{
     font-size: 12px;
     color: #ADADAD;
     width: 100%;
     text-align: right;
+    position: absolute;
+    bottom: 3px;
+    right: 5px;
 }
 .title {
     width: 100%;
@@ -431,6 +450,7 @@ a {
     border-top: 2px dashed #DEDEDE;
     padding-top: 5px;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 .summary .row {
     position: relative;
